...
                    android:paddingTop="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/word_lexical_category"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="2dp"/>
...
